# SimplePrMirrorBot

./: Cargo.toml  run_bot.sh
src/: git_utils.rs  main.rs  pr_template.rs
