[package]
name = "github-pr-mirror-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
clokwerk = "0.4.0"
futures = "0.3.30"
git2 = "0.18.3"
http = "1.1.0"
octocrab = "0.37.0"
serde = "1.0.197"
serde_yaml = "0.9.34"
tokio = { version = "1.36.0", features = ["full"] }
